# ChangeLog for vserver-utils

  22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> -m4/initrddir.m4, configure.ac,
  -etc/vserver, etc/Makefile.am, +etc/examples/vservers.rc:
  Move init script to examples dir and skip global installation

  22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/vattr.c:
  Fix error count logic

  22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> scripts/commands/status.sh,
  scripts/lib/vps.sh, src/lockfile.c:
  Fix status command logic

  22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> scripts/commands/start.sh,
  scripts/commands/stop.sh, scripts/lib/vps.sh:
  Fix start/stop exit codes

  22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> m4/pathconfig.am,
  scripts/lib/vps.sh, scripts/pathconfig.in, src/Makefile, src/lockfile.c:
  Add new lockfile implementation

  21 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/vnamespace.c:
  Prevent accidental namespace cleanup

  21 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/vmount.c, src/vnamespace.c:
  Fix lazy handling of getcwd(0,0)

  21 Jan 2006; Benedikt Böhm <hollow@gentoo.org> scripts/lib/vps.sh:
  Catch unknown init styles

  21 Jan 2006; Benedikt Böhm <hollow@gentoo.org> configure.ac, m4/libs.m4:
  Add dietlibc detection

  21 Jan 2006; Benedikt Böhm <hollow@gentoo.org> +scripts/commands/login.sh,
  scripts/lib/vps.sh, scripts/pathconfig.in, scripts/Makefile.am:
  Add login command to vserver

  21 Jan 2006; Benedikt Böhm <hollow@gentoo.org> configure.ac, +m4/libs.m4:
  Add check for libvserver and libutil (for openpty)

  20 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/Makefile, +src/vlogin.c:
  Add pseudo terminal login program

*vserver-utils-1.0.2 (10 Jan 2006)

  10 Jan 2006; Benedikt Böhm <hollow@gentoo.org> scripts/commands/release.sh:
  Add command to release persistant vserver in case of failure

  10 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/vmount.c:
  Code cleanup + various minor fixes

  10 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/vmount.c: